# mpd-legacy

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.am  README  TODO.md  coding_style  configure.ac
cmake/: TestLargeFile.cmake
design/: autobuffer_interface
src/: CMakeLists.txt  ack.h  aiff.c  ape.c  ape.h  archive_api.c  archive_plugin.c  archive_plugin.h  audio_check.c  audio_check.h  audio_config.c  audio_format.h  audio_parser.c  audio_parser.h  buffer.c  chunk.h  client.h  client_event.c  client_expire.c  client_file.c  client_file.h  client_internal.h  client_message.c  client_message.h  client_new.c  client_process.c  client_read.c  client_subscribe.c  client_subscribe.h  client_write.c  clock.h  cmdline.c  cmdline.h  command.c  compiler.h  conf.c  conf.h  config.h.in  crossfade.c  crossfade.h  (+207 more)
src/arch/: CMakeLists.txt  c11thread.c  memory.h  sem.h
src/archive/: bz2_archive_plugin.c
src/cue/: cue_parser.h
src/db/: directory.h  simple_db.h  simple_db_interface.c  simple_db_interface.h  simple_db_io.c  simple_db_io.h  simple_db_plugin.c  simple_db_plugin.h
src/decoder/: CMakeLists.txt  _flac_common.c  asap.c  asap_decoder_plugin.c  audiofile.c  audiofile_decoder_plugin.c  decoder_conf.h.in  dsdiff.c  dsdiff_decoder_plugin.c  dsdlib.c  dsf.c  dsf_decoder_plugin.c  faad.c  faad_decoder_plugin.c  ffmpeg.c  ffmpeg_decoder_plugin.c  flac.c  flac_common.c  flac_common.h  flac_decoder_plugin.c  flac_metadata.c  fluidsynth_decoder_plugin.c  gme_decoder_plugin.c  mad.c  mad_decoder_plugin.c  mikmod_decoder_plugin.c  modplug_decoder_plugin.c  mp4ff.c  mp4ff_decoder_plugin.c  mpcdec.c  mpcdec_decoder_plugin.c  mpg123.c  mpg123_decoder_plugin.c  ogg_common.h  pcm.c  pcm_decoder_plugin.c  sidplay.cxx  sndfile_decoder_plugin.c  vorbis.c  vorbis_comments.h  (+4 more)
src/encoder/: CMakeLists.txt  encoder_conf.h.in  flac.c  flac_encoder.c  lame.c  lame_encoder.c  null.c  null_encoder.c  twolame_encoder.c  vorbis.c  vorbis_encoder.c  wave.c  wave_encoder.c
src/filter/: CMakeLists.txt  audio_compress.c  audio_compress.h  autoconvert.c  autoconvert_filter_plugin.c  chain.c  chain_filter_plugin.c  convert.c  convert_filter_plugin.c  normalize.c  normalize_filter_plugin.c  null.c  null_filter_plugin.c  replay_gain.c  replay_gain_filter_plugin.c  route.c  route_filter_plugin.c  volume.c  volume_filter_plugin.c
src/input/: CMakeLists.txt  archive.c  archive_input_plugin.c  cdio_paranoia.c  cdio_paranoia_input_plugin.c  curl.c  curl_input_plugin.c  despotify.c  despotify_input_plugin.c  ffmpeg.c  ffmpeg_input_plugin.c  file.c  file_input_plugin.c  icy_metadata.c  input_conf.h.in  mms.c  mms_input_plugin.c  rewind.c  rewind.h  rewind_input_plugin.c
src/mixer/: CMakeLists.txt  alsa_mixer_plugin.c  oss.c  oss_mixer_plugin.c  pulse.c  pulse_mixer_plugin.c  roar.c  roar_mixer_plugin.c  software.c  software_mixer_plugin.c  winmm.c  winmm_mixer_plugin.c
src/output/: CMakeLists.txt  alsa.c  alsa_output_plugin.c  ao.c  ao_output_plugin.c  ffado.c  ffado_output_plugin.c  fifo.c  fifo_output_plugin.c  httpd.c  httpd_client.c  httpd_output_plugin.c  jack.c  jack_output_plugin.c  mvp.c  mvp_output_plugin.c  null.c  null_output_plugin.c  openal.c  openal_output_plugin.c  oss.c  oss_output_plugin.c  osx.c  osx_output_plugin.c  output_conf.h.in  pipe.c  pipe_output_plugin.c  pulse.c  pulse.h  pulse_output_plugin.c  recorder.c  recorder_output_plugin.c  roar.c  roar_output_plugin.c  shout.c  shout_output_plugin.c  solaris.c  solaris_output_plugin.c  winmm.c  winmm.h  (+1 more)
src/pcm/: CMakeLists.txt  pcm_buffer.c  pcm_buffer.h  pcm_conf.h.in  pcm_convert.c  pcm_convert.h  pcm_dsd.c  pcm_dsd.h  pcm_dsd_usb.c  pcm_dsd_usb.h  pcm_export.h  pcm_resample.c  pcm_resample.h  pcm_resample_internal.h  pcm_resample_libsamplerate.c  pcm_utils.h  pcm_volume.c
src/playlist/: CMakeLists.txt  asx.c  asx_playlist_plugin.c  cue.c  despotify.c  despotify_playlist_plugin.c  embcue.c  embcue_playlist_plugin.c  extm3u.c  lastfm.c  lastfm_playlist_plugin.c  m3u.c  playlist_conf.h.in  pls.c  pls_playlist_plugin.c  rss.c  rss_playlist_plugin.c  soundcloud.c  soundcloud_playlist_plugin.c  xspf.c  xspf_playlist_plugin.c
src/protocol/: CMakeLists.txt  argparser.h  result.c  result.h
src/util/: CMakeLists.txt  atomic.h  bit_reverse.h  file_utils.c  file_utils.h  list.h  list_sort.c  queue.h  queue_common.h  yatomic.h  yref.h  ythread.h
